# DTSA-5510-Week-4-Kaggle-Project

./: .gitignore  README.md  Week_4_Part_2.ipynb  main.py  pyproject.toml
data/: NMF_First_Submission.csv  NMF_Second_Submission.csv
data/part_2/: users.csv
